primer desarrollo despues de clase

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <p class="content">texto o contexto de esta entrada</p>
             </div>
             <footer class="card-footer">
-              <a href="#" class="card-footer-item button is-info is-light">Opción 1</a>
+              <a  class="card-footer-item button is-info is-light" onclick="irANivel(1,'logico')">Opción 1</a>
             </footer>
           </div>
         </div>
@@ -64,7 +64,7 @@
               <p class="content">texto o contexto de esta entrada</p>
             </div>
             <footer class="card-footer ">
-              <a href="#" class="card-footer-item button is-info is-light">Opción 2</a>
+              <a  class="card-footer-item button is-info is-light"  onclick="irANivel(1,'simulado')">Opción 2</a>
             </footer>
           </div>
         </div>
@@ -84,7 +84,7 @@
               <p class="content">texto o contexto de esta entrada</p>
             </div>
             <footer class="card-footer">
-              <a href="#" class="card-footer-item button is-info is-light">Opción 3</a>
+              <a href="#" class="card-footer-item button is-info is-light"  onclick="irANivel('trampa')">Opción 3</a>
             </footer>
           </div>
         </div>
@@ -94,4 +94,4 @@
   <script src="./app.js"></script>
 </body>
 
-</htmlse Copilot AI features
+</html>
