--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="card has-equal-height">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://picsum.photos/seed/sim/400/300" alt="Carta 2">
+                <img src="./img/" alt="Carta 2">
               </figure>
             </div>
             <div class="card-content">
