--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="card has-equal-height">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://picsum.photos/seed/logic/400/300" alt="Carta 1">
+                <img src="./img/1.png" alt="Carta 1">
               </figure>
             </div>
             <div class="card-content">
@@ -48,7 +48,7 @@
           <div class="card has-equal-height">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./img/" alt="Carta 2">
+                <img src="./img/gafas.png" alt="Carta 2">
               </figure>
             </div>
             <div class="card-content">
@@ -65,7 +65,7 @@
           <div class="card has-equal-height">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://picsum.photos/seed/trampa/400/300" alt="Carta 3">
+                <img src="./img/2.png" alt="Carta 3">
               </figure>
             </div>
             <div class="card-content">
