Proyecto Crudy final

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="card has-equal-height">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./img/2.png" alt="Carta 3">
+                <img class="img__help" src="./img/newAtajo.png" alt="Carta 3">
               </figure>
             </div>
             <div class="card-content">
